# ros_voice_system

./: README
scripts/: download_voice_code.sh  setup_config.sh
src/baidu_speech/: CMakeLists.txt
src/baidu_speech/launch/: baidu_asr.launch  baidu_tts.launch
src/baidu_speech/src/: simple_speek.py  voice_node.py
src/iflytek_asr/: CMakeLists.txt  package.xml
src/iflytek_asr/include/: msp_errors.h  msp_types.h  qisr.h  speech_recognizer.h
src/iflytek_asr/launch/: iflytek_asr.launch
src/iflytek_asr/src/: iflytek_asr.cpp  linuxrec.cpp  speech_recognizer.cpp
src/iflytek_tts/: CMakeLists.txt  package.xml
src/iflytek_tts/launch/: iflytek_tts.launch
src/iflytek_tts/src/: iflytek_tts.cpp
src/pocketsphinx/launch/: pocketsphinx.dic  pocketsphinx.launch
src/pocketsphinx/nodes/: recognizer.py
src/respeaker/: CMakeLists.txt  package.xml
src/respeaker/swig-3.0.12/: .gitignore  Makefile  config.status  preinst-swig  swig.spec
src/snowboy_wakeup/: CMakeLists.txt  package.xml
src/snowboy_wakeup/cfg/: SnowboyReconfigure.cfg
src/snowboy_wakeup/include/snowboy_wakeup/: hotword_detector.h
src/snowboy_wakeup/launch/: snowboy_wakeup.launch
src/snowboy_wakeup/resources/: corvin.pmdl
src/snowboy_wakeup/src/: hotword_detector.cpp  hotword_detector_node.cpp
src/sphinx_wakeup/launch/: sphinx_wakeup.launch
src/sphinx_wakeup/src/: .sphinx_wakeup.cpp.swp  sphinx_wakeup.cpp
src/tuling_nlu/: CMakeLists.txt  package.xml
src/voice_bringup/: CMakeLists.txt  package.xml
src/voice_move/: CMakeLists.txt
src/voice_navigation/: CMakeLists.txt  package.xml
(+95 files in other folders)
